kube/shop/base/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shop-gateway
  namespace: shop-ns
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
